WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34629
[Qt] Missing support for image interpolation quality
https://bugs.webkit.org/show_bug.cgi?id=34629
Summary
[Qt] Missing support for image interpolation quality
Ariya Hidayat
Reported
2010-02-04 20:59:47 PST
Created
attachment 48197
[details]
Patch Graphics Context's image interpolation quality is not implemented.
Attachments
Patch
(1.65 KB, patch)
2010-02-04 20:59 PST
,
Ariya Hidayat
no flags
Details
Formatted Diff
Diff
Patch
(2.34 KB, patch)
2010-02-05 09:47 PST
,
Ariya Hidayat
kenneth
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ariya Hidayat
Comment 1
2010-02-05 09:47:02 PST
Created
attachment 48237
[details]
Patch
Ariya Hidayat
Comment 2
2010-02-10 14:37:54 PST
Manually committed in
r54623
:
http://trac.webkit.org/changeset/54623
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug