2010-02-10  Ariya Hidayat  <ariya.hidayat@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Implement image interpolation quality.

        https://bugs.webkit.org/show_bug.cgi?id=34629

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContextPlatformPrivate::GraphicsContextPlatformPrivate):
        (WebCore::GraphicsContext::setImageInterpolationQuality):
        (WebCore::GraphicsContext::imageInterpolationQuality):

git-svn-id: svn://svn.chromium.org/blink/trunk@54623 bbb929c8-8fbe-4397-9dbb-9b2b20218538