third_party/WebKit/WebCore/platform/graphics/qt/GraphicsContextQt.cpp
@@ -222,6 +222,8 @@ public:
 
     QBrush solidColor;
 
+    InterpolationQuality imageInterpolationQuality;
+
     // Only used by SVG for now.
     QPainterPath currentPath;
 
@@ -236,6 +238,8 @@ GraphicsContextPlatformPrivate::GraphicsContextPlatformPrivate(QPainter* p)
     redirect = 0;
 
     solidColor = QBrush(Qt::black);
+
+    imageInterpolationQuality = InterpolationDefault;
 
     if (painter) {
         // use the default the QPainter was constructed with
@@ -1234,13 +1238,30 @@ void GraphicsContext::releaseWindowsContext(HDC hdc, const IntRect& dstRect, boo
 }
 #endif
 
-void GraphicsContext::setImageInterpolationQuality(InterpolationQuality)
+void GraphicsContext::setImageInterpolationQuality(InterpolationQuality quality)
 {
+    m_data->imageInterpolationQuality = quality;
+
+    switch (quality) {
+    case InterpolationDefault:
+    case InterpolationNone:
+    case InterpolationLow:
+        // use nearest-neigbor
+        m_data->p()->setRenderHint(QPainter::SmoothPixmapTransform, false);
+        break;
+
+    case InterpolationMedium:
+    case InterpolationHigh:
+    default:
+        // use the filter
+        m_data->p()->setRenderHint(QPainter::SmoothPixmapTransform, true);
+        break;
+    };
 }
 
 InterpolationQuality GraphicsContext::imageInterpolationQuality() const
 {
-    return InterpolationDefault;
+    return m_data->imageInterpolationQuality;
 }
 
 }
